# hall-sensor-serial

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
